--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -6,7 +6,7 @@ body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, fo
 body, button, input, select, textarea {
   font:12px/1.5 'MicrosoftYaHei','微软雅黑','PingFangSC-Regular',tahoma, arial, \5b8b\4f53;
 }
-h1, h2, h3, h4, h5, h6{ font-size:100%; font-weight: normal;}
+h1, h2, h3, h4, h5, h6{ font-weight: normal;}
 strong,b{font-weight:normal;}
 address, cite, dfn, em, var { font-style:normal; }
 code, kbd, pre, samp { font-family:couriernew, courier, monospace; }
@@ -47,6 +47,7 @@ body {
   padding: 0;
   height: 100%;
   font-size: 12px;
+  color: #5e5e5e;
   position:relative;
   overflow:hidden;
   box-sizing:border-box;
